--- a/src/WebApplicationRabbitMqDemo/wwwroot/index.html
+++ b/src/WebApplicationRabbitMqDemo/wwwroot/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Client</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
     <script src="https://cdn.jsdelivr.net/npm/@microsoft/signalr@7.0.0/dist/browser/signalr.min.js"></script>
   </head>
 
@@ -12,6 +12,6 @@
     <h1>Client</h1>
     <button id="clearMessages">Clear Messages</button>
     <div id="messages"></div>
-    <script src="singalrHub.js"></script>
+    <script src="./signalrHub.js"></script>
   </body>
 </html>
